--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "money-manager",
 	"version": "2.3.0",
 	"private": true,
+	"license": "MIT",
 	"scripts": {
 		"serve": "vue-cli-service serve",
 		"build": "vue-cli-service build",
