--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "money-manager",
-	"version": "2.3.2",
+	"version": "2.4.0",
 	"private": true,
 	"license": "MIT",
-	"author": "Natscamp Productions",
+	"author": "Nathaniel Campbell",
 	"description": "A simple money manager app",
 	"main": "background.js",
 	"scripts": {
@@ -15,6 +15,7 @@
 		"postuninstall": "electron-builder install-app-deps"
 	},
 	"dependencies": {
+		"axios": "^0.21.1",
 		"core-js": "^3.6.5",
 		"gsap": "^3.6.1",
 		"uuid": "^8.3.2",
